[package]
name = "fortknight"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-error = "1.2.2"
radix_trie = "0.1.4"
lazy_static = "1.3.0"
num-traits = "0.2.8"
num-derive = "0.2.5"
arrayvec = "0.4.11"