[package]
name = "fortknight"
version = "0.1.0"
authors = ["Andrew Gaspar <andrew.gaspar@outlook.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.2.3"
num-derive = "0.3.0"
num-traits = "0.2.8"
peek-nth = "0.2"
radix_trie = "0.1.5"
termcolor = "1.0.5"
typed-arena = "1.6.1"